(This file, CHANGES, lists fixes. See NEWS for new features and enhancements.)

3.3.2 2022-09-13

  * Fixed issue where autocomplete could fail/crash with UTF-8 characters.

  * Fixed issue where file requester could return incorrect path
    to the selected file.

  * Fixed makefile so that it correctly supports parallel builds. Thanks
    to Emily Lucy Ishikawa for contributing this fix.

3.3.1 2021-05-16

  * ttysize() is now invoked at start, improving user experience
    in the termcap/ANSI versions.

  * Fix sh syntax highlighting in double-quoted strings with complex
    variable expressions.

  * Fix java syntax highlighting for strings containing percent
    signs not in a format specifier context.

  * Fixed possible document name issue with docs from similarly named
    directories.

3.3.0 2020-02-27

  * Fixed possible crash when closing documents from within the SelectDoc
    requester.

  * Fixed adjusted position of mark, bookmark on same line as and to the right
    of multi-line pastes.

  * Fixed cursor position after reformatting a document's final paragraph.

  * Paragraph n where n>1 is atomic; i.e. a single Undo reverts changes.

3.2.1 2019-10-02

  * Fixed reordering items on multi-page requesters.

3.2.0 2019-09-30

  * Fixed typo for "Home" key in default.keys.

  * Add backtick support for MarkDown syntax (md.jsf)

  * Fixed potentially infinite backwards search-and-replace.

3.1.2 2018-10-06

  * Fixed visual glitch when characters spanning multiple columns are only
    partially displayed on the left side.

  * Fixed PARAGRAPH command.

  * DeleteNextWord now deletes through the end of the next N words.

  * Undoing DeleteNextWord/DeletePrevWord also restores cursor position.

3.1.1 2017-06-04

  * Fixed visual glitch when deleting characters from long lines.

  * Fixed broken behavior in WordWrap with leading whitespace.

  * On CloseDoc (^Q), the next document now becomes active. It used to make
    the previous document active.
