@@ -1,5 +1,10 @@
 (This file, CHANGES, lists fixes. See NEWS for new features and enhancements.)
 
+<unreleased>
+
+  * Fixed document reordering in SelectDoc requester when first or last
+    document wraps around to the other end of the document list.
+
 3.3.2 2022-09-13
 
   * Fixed issue where autocomplete could fail/crash with UTF-8 characters.
